Rename mounts to better reflect their purpose

--- a/cluster-home/operations/media/qbittorrent/helmrelease.yaml
+++ b/cluster-home/operations/media/qbittorrent/helmrelease.yaml
@@ -72,7 +72,7 @@ spec:
       config:
         enabled: true
         existingClaim: qbittorrent-config
-      media:
+      downloads:
         enabled: true
         existingClaim: nas-media-downloads
     service:
