--- a/cluster-home/operations/media/sabnzbd/helmrelease.yaml
+++ b/cluster-home/operations/media/sabnzbd/helmrelease.yaml
@@ -100,7 +100,7 @@ spec:
       config:
         enabled: true
         existingClaim: sabnzbd-config
-      media:
+      downloads:
         enabled: true
         existingClaim: nas-media-downloads
       incomplete:
