Change mount point for media files

--- a/cluster-home/operations/media/lidarr/helmrelease.yaml
+++ b/cluster-home/operations/media/lidarr/helmrelease.yaml
@@ -87,6 +87,8 @@ spec:
       media:
         enabled: true
         existingClaim: nas-media-music
+        globalMounts:
+        - path: /media/music
       downloads:
         enabled: true
         existingClaim: nas-media-downloads
