Restore paths as they were

--- a/cluster-home/operations/media/jellyfin/helmrelease.yaml
+++ b/cluster-home/operations/media/jellyfin/helmrelease.yaml
@@ -67,6 +67,8 @@ spec:
       media:
         enabled: true
         existingClaim: nas-media-videos
+        globalMounts:
+        - path: /media/videos
       transcode:
         enabled: true
         type: emptyDir
