--- a/cluster-home/operations/media/bazarr/helmrelease.yaml
+++ b/cluster-home/operations/media/bazarr/helmrelease.yaml
@@ -70,6 +70,8 @@ spec:
       media:
         enabled: true
         existingClaim: nas-media-videos
+        globalMounts:
+        - path: /media/videos
     service:
       main:
         ports:
