--- a/cluster-home/operations/gtd/baikal/helmrelease.yaml
+++ b/cluster-home/operations/gtd/baikal/helmrelease.yaml
@@ -67,15 +67,15 @@ spec:
         enabled: true
         type: nfs
         server: ${NFS_SERVER_IP}
-        path: ${NFS_SERVER_PATH_PV}/gtd
+        path: ${NFS_SERVER_PATH_PV}/gtd/baikal
         globalMounts:
         - path: /var/www/baikal/config
-          subPath: baikal/config
+          subPath: config
       data:
         enabled: true
         type: nfs
         server: ${NFS_SERVER_IP}
-        path: ${NFS_SERVER_PATH_PV}/gtd
+        path: ${NFS_SERVER_PATH_PV}/gtd/baikal
         globalMounts:
         - path: /var/www/baikal/Specific
-          subPath: baikal/data
+          subPath: data
