--- a/cluster-home/operations/media/jellyseerr/helmrelease.yaml
+++ b/cluster-home/operations/media/jellyseerr/helmrelease.yaml
@@ -47,9 +47,9 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: "OnRootMismatch"
     controllers:
-      main:
+      jellyseerr:
         containers:
-          main:
+          app:
             image:
               repository: docker.io/fallenbagel/jellyseerr
               tag: 1.7.0
@@ -68,7 +68,8 @@ spec:
         globalMounts:
         - path: /app/config
     service:
-      main:
+      app:
+        controller: jellyseerr
         type: LoadBalancer
         externalIPs:
         - ${SVC_IP_JELLYSEERR}
@@ -77,21 +78,20 @@ spec:
           http:
             port: 5055
     ingress:
-      main:
-        enabled: true
+      app:
+        className: nginx
         annotations:
-          kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-production
           authentik.home.arpa/enabled: "true"
         hosts:
-        - host: requests.buvis.net
+        - host: &hostName requests.buvis.net
           paths:
           - path: /
             pathType: Prefix
             service:
-              name: main
+              identifier: app
               port: http
         tls:
         - hosts:
-          - requests.buvis.net
+          - *hostName
           secretName: requests-crt
