Fix errors when trying to update to app-template 3.1.0

--- a/cluster-home/operations/media/flaresolverr/helmrelease.yaml
+++ b/cluster-home/operations/media/flaresolverr/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
         setVPNGateway: "true"
     controllers:
       flaresolverr:
-        controllerType: deployment
+        type: deployment
         containers:
           app:
             image:
