Fix lack of servicemonitors

--- a/cluster-home/operations/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/cluster-home/operations/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -5,6 +5,6 @@ metadata:
   name: kube-prometheus-stack
   namespace: monitoring
 resources:
-- helmrelease.yaml
-- kube-prometheus-stack.yaml
-- servicemonitors.yaml
+  - helmrelease.yaml
+  - kube-prometheus-stack.yaml
+# - servicemonitors.yaml
