Allow incoming traffic to vpn gateway

--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -89,6 +89,9 @@ spec:
               - NET_ADMIN
         networkPolicy:
           enabled: true
+          ingress:
+            - from:
+                - podSelector: {}
           egress:
             - to:
                 - ipBlock:
