--- a/cluster-home/operations/kube-tools/cert-manager/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/cert-manager/helmrelease.yaml
@@ -31,5 +31,5 @@ spec:
     prometheus:
       enabled: true
       servicemonitor:
-        enabled: true
+        enabled: false
         prometheusInstance: monitoring
