--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -92,9 +92,9 @@ spec:
           egress:
             - to:
                 - ipBlock:
-                  cidr: 0.0.0.0/0
+                    cidr: 0.0.0.0/0
               ports:
                 - port: ${SECRET_VPN_GATEWAY_PORT}
                   protocol: UDP
-            - to:
-                - namespaceSelector: {}
+            - toEntities:
+                - cluster
