--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
       NOT_ROUTED_TO_GATEWAY_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
       VPN_INTERFACE: tun0
       VPN_TRAFFIC_PORT: ${SECRET_VPN_GATEWAY_PORT}
-      VPN_BLOCK_OTHER_TRAFFIC: true
+      VPN_BLOCK_OTHER_TRAFFIC: false
       VPN_LOCAL_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
       VXLAN_ID: 43
       VXLAN_IP_NETWORK: 172.16.1
@@ -87,6 +87,7 @@ spec:
           capabilities:
             add:
               - NET_ADMIN
+              - SYS_MODULE
         networkPolicy:
           enabled: true
           egress:
