--- a/cluster-home/operations/media/bazarr/helmrelease.yaml
+++ b/cluster-home/operations/media/bazarr/helmrelease.yaml
@@ -6,16 +6,14 @@ metadata:
   namespace: media
 spec:
   dependsOn:
-  - name: ingress-nginx
-    namespace: kube-tools
-  - name: cert-manager
-    namespace: kube-tools
-  - name: authentik
-    namespace: security
-  - name: vpn-gateway
-    namespace: vpn
-  - name: openebs
-    namespace: storage
+    - name: ingress-nginx
+      namespace: kube-tools
+    - name: cert-manager
+      namespace: kube-tools
+    - name: authentik
+      namespace: security
+    - name: openebs
+      namespace: storage
   interval: 5m
   install:
     timeout: 15m
@@ -40,15 +38,15 @@ spec:
   values:
     defaultPodOptions:
       annotations:
-        setVPNGateway: "true"
+        vpn/gluetun-inject: "true"
       securityContext:
         runAsUser: 568
         runAsGroup: 568
         fsGroup: 568
         fsGroupChangePolicy: "OnRootMismatch"
         supplementalGroups:
-        - 983
-        - 985
+          - 983
+          - 985
     controllers:
       bazarr:
         containers:
@@ -71,7 +69,7 @@ spec:
         enabled: true
         existingClaim: nas-media-videos
         globalMounts:
-        - path: /media/videos
+          - path: /media/videos
     service:
       app:
         controller: bazarr
@@ -85,14 +83,14 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           authentik.home.arpa/enabled: "true"
         hosts:
-        - host: &hostName bazarr.buvis.net
-          paths:
-          - path: /
-            pathType: Prefix
-            service:
-              identifier: app
-              port: http
+          - host: &hostName bazarr.buvis.net
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+                  port: http
         tls:
-        - hosts:
-          - *hostName
-          secretName: bazarr-crt
+          - hosts:
+              - *hostName
+            secretName: bazarr-crt
