--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -34,7 +34,7 @@ spec:
                       - name: OPENVPN_PASSWORD
                         value: ${SECRET_VPN_GATEWAY_PASSWORD}
                       - name: VPN_PORT_FORWARDING_LISTENING_PORT
-                        value: "${SECRET_VPN_BT_FORWARD_PORT}"
+                        value: "'${SECRET_VPN_BT_FORWARD_PORT}'"
                       - name: TZ
                         value: ${TIMEZONE}
                     securityContext:
