--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -38,6 +38,7 @@ spec:
                       - name: TZ
                         value: ${TIMEZONE}
                     securityContext:
+                      runAsUser: 0
                       capabilities:
                         add:
                           - NET_ADMIN
