--- a/cluster-home/operations/media/sabnzbd/helmrelease.yaml
+++ b/cluster-home/operations/media/sabnzbd/helmrelease.yaml
@@ -6,16 +6,14 @@ metadata:
   namespace: media
 spec:
   dependsOn:
-  - name: ingress-nginx
-    namespace: kube-tools
-  - name: cert-manager
-    namespace: kube-tools
-  - name: authentik
-    namespace: security
-  - name: vpn-gateway
-    namespace: vpn
-  - name: openebs
-    namespace: storage
+    - name: ingress-nginx
+      namespace: kube-tools
+    - name: cert-manager
+      namespace: kube-tools
+    - name: authentik
+      namespace: security
+    - name: openebs
+      namespace: storage
   interval: 5m
   install:
     timeout: 15m
@@ -40,7 +38,7 @@ spec:
   values:
     defaultPodOptions:
       annotations:
-        setVPNGateway: "true"
+        vpn/gluetun-inject: "true"
       nodeSelector:
         node-role.kubernetes.io/worker: "true"
       affinity:
@@ -119,14 +117,14 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           authentik.home.arpa/enabled: "true"
         hosts:
-        - host: &hostName sabnzbd.buvis.net
-          paths:
-          - path: /
-            pathType: Prefix
-            service:
-              identifier: app
-              port: http
+          - host: &hostName sabnzbd.buvis.net
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+                  port: http
         tls:
-        - hosts:
-          - *hostName
-          secretName: sabnzbd-crt
+          - hosts:
+              - *hostName
+            secretName: sabnzbd-crt
