Set static IPs for some LBs

--- a/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
@@ -32,8 +32,7 @@ spec:
       service:
         type: LoadBalancer
         annotations:
-          "lbipam.cilium.io/ips": ${SVC_IP_INGRESS}
-        externalTrafficPolicy: Local
+          lbipam.cilium.io/ips: ${SVC_IP_INGRESS}
       replicaCount: 3
       metrics:
         enabled: true
