--- a/cluster-home/operations/radio/snapserver/helmrelease.yaml
+++ b/cluster-home/operations/radio/snapserver/helmrelease.yaml
@@ -31,36 +31,14 @@ spec:
       main:
         enabled: true
         type: LoadBalancer
-        externalIPs:
-        - ${SVC_IP_SNAPSERVER}
-        externalTrafficPolicy: Local
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_IP_SNAPSERVER}
         ports:
           http:
             port: 80
-      audio:
-        enabled: true
-        type: LoadBalancer
-        externalIPs:
-        - ${SVC_IP_SNAPSERVER}
-        externalTrafficPolicy: Local
-        ports:
           audio:
             port: 1704
-      control:
-        enabled: true
-        type: LoadBalancer
-        externalIPs:
-        - ${SVC_IP_SNAPSERVER}
-        externalTrafficPolicy: Local
-        ports:
           control:
             port: 1705
-      stream1:
-        enabled: true
-        type: LoadBalancer
-        externalIPs:
-        - ${SVC_IP_SNAPSERVER}
-        externalTrafficPolicy: Local
-        ports:
           stream1:
             port: 4955
