--- a/cluster-home/operations/media/jellyfin/helmrelease.yaml
+++ b/cluster-home/operations/media/jellyfin/helmrelease.yaml
@@ -17,12 +17,12 @@ spec:
       remediateLastFailure: true
     cleanupOnFail: true
   dependsOn:
-  - name: ingress-nginx
-    namespace: kube-tools
-  - name: cert-manager
-    namespace: kube-tools
-  - name: openebs
-    namespace: storage
+    - name: ingress-nginx
+      namespace: kube-tools
+    - name: cert-manager
+      namespace: kube-tools
+    - name: openebs
+      namespace: storage
   chart:
     spec:
       # renovate: registryUrl=https://bjw-s.github.io/helm-charts/
@@ -41,9 +41,9 @@ spec:
         fsGroup: 568
         fsGroupChangePolicy: "OnRootMismatch"
         supplementalGroups:
-        - 44
-        - 109
-        - 65539
+          - 44
+          - 109
+          - 65539
     controllers:
       jellyfin:
         containers:
@@ -68,7 +68,7 @@ spec:
         enabled: true
         existingClaim: nas-media-videos
         globalMounts:
-        - path: /media/videos
+          - path: /media/videos
       transcode:
         enabled: true
         type: emptyDir
@@ -76,9 +76,8 @@ spec:
       app:
         controller: jellyfin
         type: LoadBalancer
-        externalIPs:
-        - ${SVC_IP_JELLYFIN}
-        externalTrafficPolicy: Local
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_IP_JELLYFIN}
         ports:
           http:
             port: 8096
@@ -88,13 +87,13 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
         hosts:
-        - host: &hostName jellyfin.buvis.net
-          paths:
-          - path: /
-            service:
-              identifier: app
-              port: http
+          - host: &hostName jellyfin.buvis.net
+            paths:
+              - path: /
+                service:
+                  identifier: app
+                  port: http
         tls:
-        - hosts:
-          - *hostName
-          secretName: jellyfin-crt
+          - hosts:
+              - *hostName
+            secretName: jellyfin-crt
