Switch off monitoring

--- a/cluster-home/operations/network/blocky/helmrelease.yaml
+++ b/cluster-home/operations/network/blocky/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
             protocol: UDP
     serviceMonitor:
       main:
-        enabled: true
+        enabled: false
         serviceName: blocky
         endpoints:
           - port: http
